src/test/deca/syntax/invalid/className-null.synt
className-null.deca:1:
